--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3></h3>
+          <p>Feel free to email me I like to talk.</p>
           <a class="btn" href="mailto:telmogosilva@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -52,7 +52,7 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/telmogsilva/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://github.com/tgspt">Github</a>
         <p class="name"> © Telmo Silva.</p>
       </div>
       
