--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3></h3>
-          <p>Feel free to email me I like to talk.</p>
+          <h3>Feel free to email me I like to talk.</h3>
+          <p></p>
           <a class="btn" href="mailto:telmogosilva@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -51,7 +51,7 @@
       
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/telmogsilva/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://twitter.com/TgSpt1">Twitter</a>
         <a class="footer-link" href="https://github.com/tgspt">Github</a>
         <p class="name"> © Telmo Silva.</p>
       </div>
