--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
         <img  class="cloud_top" src="Images/cloud.png" alt="nuvem_top">
         <h1>I'm Telmo</h1>
-        <h2>A <span class="pro"> Pro</span>grammer.</h2>
+        <h2>A Programmer.</h2>
         <img  class="cloud_bot" src="Images/cloud.png" alt="nuvem_bot">
         <img class="mountain" src="Images/mountain.png" alt="mountain">
     </div>
@@ -24,6 +24,7 @@
           <img src="" alt="">
           <h2>Hi!!!!!</h2>
           <p>I am a Biochemist with a master in Bioinformatics.</p>
+          <p>Still learning web dev, so sorry for the typos and any other mistakes.</p>
         </div>
         <hr>
         <div class="skills">
