--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="skill-row">
             <img class="pc-img" src="Images/200.webp" alt="pc">
             <h3 class="skill-text">Development</h3>
-            <p class="skill-text">While in my bachelors i learned that computers and programming had a big role in biochemistry, with molecular dynamics simulations. This led me to my master's in bioinformatics where another love started to grow. And as a famous singer in Portugal says, "I have two loves, and I don't know which one I like more."</p>
+            <p class="skill-text">While in my bachelors I learned that computers and programming had a big role in biochemistry, with molecular dynamics simulations. This led me to my master's in bioinformatics where another love started to grow. And as a famous singer in Portugal says, "I have two loves, and I don't know which one I like more."</p>
           </div>
         </div>
         <hr>
