--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="skill-row">
             <img class="biochemistry-img" src="Images/science.webp" alt="biochemistry">
             <h3 class="skill-text">Biochemistry</h3>
-            <p class="skill-text">Since I was little, i always loved science. My journey took me to learn more and more about the chemical processes in organisms.</p>
+            <p class="skill-text">Since I was little, I always loved science. My journey took me to learn more and more about the chemical processes in organisms.</p>
           </div>
           <div class="skill-row">
             <img class="pc-img" src="Images/200.webp" alt="pc">
